@@ -77,6 +77,11 @@ libtap_la_SOURCES += \
 	cable/ei012.c
 endif
 
+if ENABLE_CABLE_GPIO
+libtap_la_SOURCES += \
+	cable/gpio.c
+endif
+
 if ENABLE_CABLE_KEITHKOEP
 libtap_la_SOURCES += \
 	cable/keithkoep.c
